# dvb-parser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/superpowers/plans/: 2026-05-02-dvb-parser-implementation.md  2026-05-03-dvb-parser-p1-expansion.md  2026-05-03-dvb-parser-p2-expansion.md  2026-05-03-dvbparser-highlevel-api.md
docs/superpowers/specs/: 2026-05-02-dvb-parser-design.md  2026-05-03-dvb-parser-p1-expansion.md  2026-05-03-dvb-parser-p2-expansion.md  2026-05-03-dvbparser-highlevel-api.md
src/dvb_parser/: __init__.py  models.py  parser.py
src/dvb_parser/bbframe/: __init__.py  models.py  parser.py
src/dvb_parser/gse/: __init__.py  models.py  parser.py
src/dvb_parser/mpe/: __init__.py  models.py  parser.py
src/dvb_parser/nip/: __init__.py  models.py  parser.py
src/dvb_parser/pes/: __init__.py  models.py  parser.py
src/dvb_parser/psi/: __init__.py  models.py  pat.py  pmt.py
src/dvb_parser/si/: __init__.py  eit.py  models.py  nit.py  sdt.py  tdt.py
src/dvb_parser/ts/: __init__.py  models.py  parser.py
src/dvb_parser/ule/: __init__.py  models.py  parser.py
src/dvb_parser/utils/: __init__.py  crc.py
tests/: __init__.py  test_bbframe.py  test_bbframe_models.py  test_eit.py  test_gse.py  test_integration.py  test_mpe.py  test_nip.py  test_parser.py  test_pes.py  test_psi.py  test_psi_models.py  test_si.py  test_si_models.py  test_tdt.py  test_ts.py  test_ule.py  test_utils.py
